@@ -1,0 +1,9 @@
+Title: LDAP: Fixed broken role sync plugin with OpenLDAP
+Level: 1
+Component: wato
+Version: 1.2.4b2
+Date: 1387526157
+Class: fix
+
+The role sync plugin simply did not sync the roles of users even
+if the group memberships in the OpenLDAP directory were OK.
